<resources>
    <string name="app_name">hostel</string>
    <string name="hostel_land">Hostel Land</string>
    <string name="email">Email:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">----------OR-------------</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">dashboard</string>
    <string name="hostels">hostel</string>
    <string name="users">Users</string>
    <string name="Profile">Profile</string>
    <string name="total_hostel">Total Hostels:</string>
    <string name="_1">1</string>
    <string name="api_key">AIzaSyDQgxsTwmbkJjjYK-SM7ImJErnZLFFPNHQ</string>


    <string name="delete">Delete Account</string>
</resources>